# pantograph_automation

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: mechanics.yaml
src/5bar_control/: trajectory.py
src/pantograph_control/: __init__.py  camera.py  drivers.py
tests/: test_drivers.py
